Fix #3230 "Form Builder Summary Page: headers wrap"

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-summary.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-summary.less
@@ -74,7 +74,7 @@
             a, a:hover { text-decoration: none; color: black; outline: 0 }   // Links in table must appear as normal text
         }
 
-        td {
+        td, th {
 
             .xforms-output .xforms-output-output {
                 white-space: nowrap;
